refactor(data-jdbc): unify metadata architecture with three-layer loading
- Create commons module for shared naming utilities (NamingUtils)
- Implement EntityMetadataLoader SPI interface for metadata loading
- Add AptMetadataLoader and ReflectiveMetadataLoader implementations
- Refactor ReflectiveEntityMetadata to support association parsing
- Add ReflectiveRelationMetadata for association metadata extraction
- Add ReflectiveFieldMetadata.isAssociationField() to skip association fields
- Fix test table column names (create_time -> created_at)
- Fix OllamaLlmClient to use OllamaOptions instead of model() method
- Delete deprecated SimpleEntityMetadata and SimpleFieldMetadata
- Update EntityMetadataCache to use loader chain pattern